fix not all user can finish quit night waiting modal bugs

--- a/src/app/create-a-room/create-a-room.component.html
+++ b/src/app/create-a-room/create-a-room.component.html
@@ -59,7 +59,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">Create<i class="fa-solid fa-door-open"></i></button>
+                    <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">Create <i class="fa-solid fa-user-group"></i></button>
                 </div>
             </div>
         </form>
