--- a/src/app/players-list/players-list.component.html
+++ b/src/app/players-list/players-list.component.html
@@ -204,7 +204,7 @@ data-bs-keyboard="false" aria-labelledby="waitOthersToVoteModel" aria-hidden="tr
     </div> 
 </div>
 
-<button #JudasCheckingResult  [hidden]="true" data-bs-toggle="modal" data-bs-target="#JudasCheckingResult"></button>
+<!-- <button #JudasCheckingResult  [hidden]="true" data-bs-toggle="modal" data-bs-target="#JudasCheckingResult"></button>
 <div class="modal fade" id="JudasCheckingResult" tabindex="-1" data-bs-backdrop="static" 
 data-bs-keyboard="false" aria-labelledby="JudasCheckingResult" aria-hidden="true">
     <div class="modal-dialog">
@@ -228,4 +228,4 @@ data-bs-keyboard="false" aria-labelledby="JudasCheckingResult" aria-hidden="true
             </div>
         </div>
     </div> 
-</div>
+</div> -->
