--- a/src/app/game-room/game-room.component.css
+++ b/src/app/game-room/game-room.component.css
@@ -1,15 +1,15 @@
-.list-group{
-    max-height: 85vh;
+/* .list-group{ */
+    /* max-height: 85vh; */
     /* position:relative; */
     /* min-height: 87vh; */
-    overflow: scroll;
+    /* overflow: scroll; */
     /* overflow-y:hidden; */
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
     /* overflow-y: hidden; */
     /* -webkit-overflow-scrolling: touch; */
-}
+/* } */
 
-#messageGroup{
+/* #messageGroup{
     overflow: scroll;
     overflow-x: hidden;
-}
+} */
