--- a/src/app/home/home-page.component.html
+++ b/src/app/home/home-page.component.html
@@ -42,7 +42,7 @@
     <app-create-a-room></app-create-a-room>
 </div>
 
-<div class="modal fade" id="backgroundAndDeveloperInfo" tabindex="-1" data-bs-backdrop="static" data-bs-keyboard="false" 
+<div class="modal fade" id="backgroundAndDeveloperInfo" tabindex="-1" data-bs-keyboard="false" 
 aria-labelledby="backgroundAndDeveloperInfo" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -68,7 +68,7 @@ aria-labelledby="backgroundAndDeveloperInfo" aria-hidden="true">
             </div>
             <div class="modal-footer d-flex justify-content-right">
                 <button type="button" class="btn btn-primary" data-bs-dismiss="modal">
-                    Let's Start! <i class="fa-regular fa-face-laugh-wink"></i>
+                    Let's Start! <i class="fa-solid fa-face-laugh-squint"></i>
                 </button>
             </div>
         </div>
