--- a/src/app/game-room/game-room.component.html
+++ b/src/app/game-room/game-room.component.html
@@ -81,7 +81,7 @@
             <button #nightWaitingModel [hidden]="true" data-bs-toggle="modal" data-bs-target="#nightWaitingModel"></button>
             <button #AnnounceExileModel [hidden]="true" data-bs-toggle="modal" data-bs-target="#AnnounceExileModel"></button>
             <button #SpiritualFormationQuestion [hidden]="true" data-bs-toggle="modal" data-bs-target="#SpiritualFormationQuestion"></button>
-            
+            <button #waitingForOtherPlayersToViewExileResult [hidden]="true" data-bs-toggle="modal" data-bs-target="#waitingForOtherPlayersToViewExileResult"></button>
         
             <div class="w-100"></div>
             <div class="col pt-2">
@@ -95,6 +95,7 @@
                         [childGameOn]="gameOn"
                         [voteState]="nextStep.nextStepName"
                         [gameFinished]="gameFinished"
+                        [identity]="identity"
                     ></app-players-list>
                 </div>
             </div>
@@ -110,6 +111,9 @@ aria-labelledby="backToMenu" aria-hidden="true">
                 <p class="modal-title fs-6">Back to Home</p>
             </div>
             <div class="modal-body text-center">
+                <div *ngIf="nightRoundFinish">
+                    <strong>Night Round Finished! Please go back to the modal and view the exile result!</strong>
+                </div>
                 <p class="badge bg-danger text-wrap fw-bold fs-3">
                     Are you sure to go back to home?
                 </p>
@@ -118,6 +122,8 @@ aria-labelledby="backToMenu" aria-hidden="true">
                 </p>
             </div>
             <div class="modal-footer text-center d-flex justify-content-between">
+                <button #closeBackToMenuModel  [hidden]="true" type="button" class="btn btn-primary" 
+                data-bs-dismiss="modal"></button>
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
                     No <i class="fa-solid fa-xmark"></i>
                 </button>
@@ -209,6 +215,9 @@ aria-labelledby="info" aria-hidden="true">
                 <h5 class="modal-title">You Identity</h5>
             </div>
             <div class="modal-body">
+                <div *ngIf="nightRoundFinish">
+                    <strong>Night Round Finished! Please go back to the modal and view the exile result!</strong>
+                </div>
                 <div>
                     You identity is: <div class="badge bg-danger text-wrap fw-bold">{{identity}}</div>
                 </div>
@@ -230,9 +239,14 @@ aria-labelledby="info" aria-hidden="true">
                     <i class="fa-solid fa-microphone"></i> In discussion <br>
                     <i class="fa-solid fa-book-open"></i> Doing spiritual formation question <br>
                     <i class="fa-solid fa-ban"></i> Player is offline <br>
+                    <i class="fa-solid fa-user-ninja"></i> Nicodemus POV <br>
+                    <i class="fa-solid fa-question"></i> Priest and Pharisee POV
+
                 </div>
             </div>
             <div class="modal-footer text-center d-flex justify-content-right">
+                <button #closeInfoModel  [hidden]="true" type="button" class="btn btn-primary" 
+                data-bs-dismiss="modal"></button>
                 <button type="button" class="btn btn-primary" data-bs-dismiss="modal" >
                     Got it! <i class="fa-regular fa-circle-check"></i>
                 </button>
@@ -246,11 +260,17 @@ aria-labelledby="info" aria-hidden="true">
 data-bs-keyboard="false" aria-labelledby="waitingForOtherPlayers" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
-            <div class="modal-body text-center">
-                <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
-                    <span class="visually-hidden">Loading...</span>
+            <div class="modal-body">
+                <div>
+                    <div><strong>Waiting for these players finish viewing their identity:</strong></div>
+                    <ul class="list-group">
+                        <div *ngFor="let user of stillInActionPlayers">
+                            <li class="list-group-item">
+                                <div class="spinner-border spinner-border-sm text-primary" role="status"></div> {{user.name}}
+                            </li>
+                        </div>
+                    </ul>
                 </div>
-                <h5> Waiting for other players to finish viewing their identity ... </h5>
                 <button #closeWaitingForOtherPlayers  [hidden]="true" type="button" class="btn btn-primary" 
                 data-bs-dismiss="modal" ></button>
             </div>
@@ -293,9 +313,6 @@ aria-labelledby="winningModel" aria-hidden="true">
                 </div>
             </div>
             <div class="modal-footer d-flex justify-content-right">
-                <!-- <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="resetAndPrepareToViewGameHistory()">
-                    Okay <i class="fa-regular fa-circle-check"></i>
-                </button> -->
                 <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="goToGameHistoryModal()">
                     Okay <i class="fa-regular fa-circle-check"></i>
                 </button>
@@ -304,13 +321,13 @@ aria-labelledby="winningModel" aria-hidden="true">
     </div> 
 </div>
 
-<div class="modal fade" id="nightWaitingModel" tabindex="-1"
+<div class="modal fade" id="nightWaitingModel" tabindex="-1" data-bs-backdrop="static"
 data-bs-keyboard="false" aria-labelledby="nightWaitingModel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header d-flex justify-content-between">
                 <h5 class="modal-title fs-6">Night waiting screen</h5>
-                <button type="button" class="btn btn-primary" data-bs-dismiss="modal">
+                <button type="button" class="btn btn-primary" data-bs-dismiss="modal" [disabled]="nightRoundFinish">
                     Hide <i class="fa-regular fa-eye-slash"></i>
                 </button>
             </div>
@@ -477,7 +494,7 @@ aria-labelledby="AnnounceExileModel" aria-hidden="true">
             </ng-template>
             <ng-template #outGame>
                 <div class="modal-footer d-flex justify-content-right">
-                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal">
+                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="SetNightWaitModalShowFlagToFalse()">
                         Exit <i class="fa-solid fa-person-walking-arrow-right"></i>
                     </button>
                 </div>
@@ -486,9 +503,32 @@ aria-labelledby="AnnounceExileModel" aria-hidden="true">
     </div> 
 </div>
 
+<div class="modal fade" id="waitingForOtherPlayersToViewExileResult" tabindex="-1" data-bs-backdrop="static" 
+data-bs-keyboard="false" aria-labelledby="waitingForOtherPlayersToViewExileResult" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-body">
+                <div>
+                    <div><strong>Waiting for these players finish view exile result:</strong></div>
+                    <ul class="list-group">
+                        <div *ngFor="let user of stillInActionPlayers">
+                            <li class="list-group-item">
+                                <div class="spinner-border spinner-border-sm text-primary" role="status"></div> {{user.name}}
+                            </li>
+                        </div>
+                    </ul>
+                </div>
+                <button #closewaitingForOtherPlayersToViewExileResult  [hidden]="true" type="button" class="btn btn-primary" 
+                data-bs-dismiss="modal" ></button>
+            </div>
+        </div>
+        
+    </div> 
+</div>
+
 <div class="modal fade" id="SpiritualFormationQuestion" tabindex="-1" data-bs-backdrop="static" data-bs-keyboard="false" 
 aria-labelledby="SpiritualFormationQuestion" aria-hidden="true">
-    <div class="modal-dialog">
+    <!-- <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header d-flex justify-content-between">
                 <h5 class="modal-title fs-6">Spiritual Formation Question</h5>
@@ -566,7 +606,8 @@ aria-labelledby="SpiritualFormationQuestion" aria-hidden="true">
                 </button>
             </div>
         </div>
-    </div> 
+    </div>  -->
+    <app-question-modal [_groupName]="_groupName" [_name]="_name" [gameFinished]="gameFinished"></app-question-modal>
 </div>
 
 <div class="modal fade" id="gameHistory" tabindex="-1" data-bs-backdrop="static" data-bs-keyboard="false" 
