--- a/src/app/players-list/players-list.component.html
+++ b/src/app/players-list/players-list.component.html
@@ -27,6 +27,18 @@
                         <div *ngIf="offLinePlayerName.includes(user.name)" class="pe-1">
                             <i class="fa-solid fa-ban"></i>
                         </div>
+                        <div *ngIf="identity == 'Nicodemus' && 
+                        (PriestName == user.name || ROTSName == user.name)" class="pe-1">
+                            <i class="fa-solid fa-user-ninja"></i>
+                        </div>
+                        <div *ngIf="identity == 'Preist' && 
+                        (NicoName == user.name || ROTSName == user.name)" class="pe-1">
+                            <i class="fa-solid fa-question"></i>
+                        </div>
+                        <div *ngIf="identity == 'Pharisee' && 
+                        (NicoName == user.name || PriestName == user.name)" class="pe-1">
+                            <i class="fa-solid fa-question"></i>
+                        </div>
                         <span class="badge bg-danger d-flex justify-content-center align-items-center">
                             <div>{{i + 1}}</div>
                         </span>
@@ -195,11 +207,17 @@ data-bs-keyboard="false" aria-labelledby="CheckConformationModel" aria-hidden="t
 data-bs-keyboard="false" aria-labelledby="waitOthersToVoteModel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
-            <div class="modal-body text-center">
-                <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
-                    <span class="visually-hidden">Loading...</span>
+            <div class="modal-body">
+                <div>
+                    <div><strong>Waiting for these players finish voting:</strong></div>
+                    <ul class="list-group">
+                        <div *ngFor="let user of stillInActionPlayers">
+                            <li class="list-group-item">
+                                <div class="spinner-border spinner-border-sm text-primary" role="status"></div> {{user.name}}
+                            </li>
+                        </div>
+                    </ul>
                 </div>
-                <h5> Please wait for others to finish voting ...  <i class="fa-solid fa-check-to-slot"></i> </h5>
                 <button #closeWaitOthersToVoteModel  [hidden]="true" type="button" class="btn btn-primary" 
                 data-bs-dismiss="modal"></button>
             </div>
