update reconnection feature

--- a/src/app/game-history/game-history.component.html
+++ b/src/app/game-history/game-history.component.html
@@ -12,7 +12,7 @@
                         </div>
                     </div>
                     <div class="row pt-2">
-                        <div class="col-md-4">
+                        <div class="col d-flex">
                             <ul class="list-group">
                                 <div *ngFor="let dayHistory of histories.get(pageSelect)">
                                     <li class="fs-6 list-group-item">{{dayHistory}}</li>
