--- a/src/app/home/home-page.component.html
+++ b/src/app/home/home-page.component.html
@@ -54,7 +54,7 @@ aria-labelledby="backgroundAndDeveloperInfo" aria-hidden="true">
                     <p class="text-break">Greetings Player,</p>
 
                     <p class="text-break lh-base">
-                        We would like to praise <strong> Lord for his great work </strong> in using us to develop this exciting game. 
+                        We would like to praise <strong> the Lord for his great work </strong> in using us to develop this exciting game. 
                         Its purpose is to educate players on <span class="text-decoration-underline">the challenges early Christians faced 
                             in establishing their first church</span> and <span class="text-decoration-underline">to show God's power in setting them apart from Judaism</span>. 
                             To learn more about the background history of this game, <span class="text-success">click on the button at the top right corner</span>. 
@@ -64,11 +64,11 @@ aria-labelledby="backgroundAndDeveloperInfo" aria-hidden="true">
 
                     Blessings,<br>
                     Face2Face
-                </div>
+                </div>                    
             </div>
             <div class="modal-footer d-flex justify-content-right">
                 <button type="button" class="btn btn-primary" data-bs-dismiss="modal">
-                    Let's Start! <i class="fa-solid fa-face-laugh-squint"></i>
+                    Let's Start! <i class="fa-solid fa-face-laugh-wink"></i>
                 </button>
             </div>
         </div>
