--- a/src/app/question-modal/question-modal.component.html
+++ b/src/app/question-modal/question-modal.component.html
@@ -62,7 +62,7 @@
                 <div> Sorry you are wrong! </div>
                 <div> Correct Answer: <strong>{{SpiritualQuestion.question.An}}</strong> </div>
                 <div *ngIf="SpiritualQuestion.question.Ex !== undefined" style="white-space: pre-line"> 
-                    Explanation: <br>
+                    <strong>Explanation:</strong> <br>
                     {{SpiritualQuestion.question.Ex}} 
                 </div>
             </div>
