--- a/src/app/players-list/players-list.component.html
+++ b/src/app/players-list/players-list.component.html
@@ -100,12 +100,12 @@
                 <div *ngIf="checkIfCurrentPlayerIsInGameOrNot(user.name); then inGameBadge else outGameBadge"> </div>
                 <ng-template #inGameBadge class="d-flex align-items-center">
                     <span class="badge bg-primary d-flex justify-content-center align-items-center">
-                        <div>In</div>
+                        <div>In Game</div>
                     </span>
                 </ng-template>
                 <ng-template #outGameBadge class="d-flex align-items-center">
                     <span class="badge bg-danger d-flex justify-content-center align-items-center" >
-                        <div>Out</div>
+                        <div>Out Game</div>
                     </span>
                 </ng-template>
             </div>
@@ -209,14 +209,27 @@ data-bs-keyboard="false" aria-labelledby="waitOthersToVoteModel" aria-hidden="tr
         <div class="modal-content">
             <div class="modal-body">
                 <div>
-                    <div><strong>Waiting for these players finish voting:</strong></div>
-                    <ul class="list-group">
-                        <div *ngFor="let user of stillInActionPlayers">
-                            <li class="list-group-item">
-                                <div class="spinner-border spinner-border-sm text-primary" role="status"></div> {{user.name}}
-                            </li>
+                    <div class="pb-2"><strong>Waiting for others to finish voting ...</strong></div>
+                    <div class="progress" role="progressbar" aria-label="Animated striped example" [attr.aria-valuenow]="waitingProgessPercentage" aria-valuemin="0" aria-valuemax="100">
+                        <div class="progress-bar progress-bar-striped progress-bar-animated" [style.width]="waitingProgessPercentage + '%'"></div>
+                    </div>
+                    <div class="pt-2">
+                        <button type="button" class="btn btn-outline-primary pt-2"
+                        (click)="isCollapsed = ! isCollapsed"
+                        [attr.aria-expanded]="!isCollapsed"
+                        aria-controls="collapseExample">
+                            Waiting for players list
+                        </button>
+                        <div #collapse="ngbCollapse" [(ngbCollapse)]="isCollapsed">
+                            <ul class="list-group">
+                                <div *ngFor="let user of stillInActionPlayers">
+                                    <li class="list-group-item">
+                                        <div class="spinner-border spinner-border-sm text-primary" role="status"></div> {{user.name}}
+                                    </li>
+                                </div>
+                            </ul>
                         </div>
-                    </ul>
+                    </div>
                 </div>
                 <button #closeWaitOthersToVoteModel  [hidden]="true" type="button" class="btn btn-primary" 
                 data-bs-dismiss="modal"></button>
