--- a/src/app/home/home-page.component.html
+++ b/src/app/home/home-page.component.html
@@ -68,7 +68,7 @@ aria-labelledby="backgroundAndDeveloperInfo" aria-hidden="true">
             </div>
             <div class="modal-footer d-flex justify-content-right">
                 <button type="button" class="btn btn-primary" data-bs-dismiss="modal">
-                    Let's Start! <i class="fa-solid fa-face-laugh-wink"></i>
+                    Let's Start! <i class="fa-solid fa-champagne-glasses"></i>
                 </button>
             </div>
         </div>
